contrast fix

--- a/styles/small.css
+++ b/styles/small.css
@@ -126,7 +126,7 @@ nav a.active {
 }
 
 .wdd {
-    background-color: #4b1616;
+    background-color: #767272;
 }
 
 /* Footer */
